Correct vertical alignment (#243)

--- a/media/css/site.stylesheet.css
+++ b/media/css/site.stylesheet.css
@@ -24,6 +24,7 @@
 	color: white;
 	padding: 5px;
 	float: left;
+	height: inherit;
 }
 
 .score {
